# backend-bp-bcpn

./: .env  Cargo.toml
.sqlx/: query-a4f39a603ee43e0d6ea9608e13607e427e2e15472b3fba098dcefe517b78fd3a.json  query-ef089566a4a6f1ba6e3b8d21af905cbe497ff274ba88dacd63ad7e5f2fcef79a.json
src/: lib.rs  main.rs
src/migrations/: 20240428_update_transactions.sql  202404_create_transactions.sql
src/migrations/migrations/: 20250410144212_create_transactions_table.sql
src/models/: airtime.rs  billers.rs  bluecode.rs  dstv.rs  payments.rs  transactions.rs
src/routes/: airtime.rs  billers.rs  bluecode.rs  dstv.rs  mod.rs  payments.rs  transactions.rs
src/services/: airtime.rs  airtime_test.rs  billers.rs  bluecode.rs  dstv.rs  mod.rs  payments.rs
src/utils/: error.rs  logger.rs
tests/: airtime_test.rs  billers_test.rs  bluecode_routes_test.rs  dstv_lookup_test.rs
